@@ -5,7 +5,7 @@ AUX 9999-gentoo-fb-path.patch 804 RMD160 4e46da3ee7b36b2f6618089c42ab06a54fc5c45
 AUX gentoo_ply.png 11884 RMD160 b6854064f2a6c94df51bcc8f0de03f2de3dde52d SHA1 93499a1bc9f655d9da6dde482125ab2595c1c0ae SHA256 9d22eaca844c18510d250db34fb689323f697b621387bbd1b5e4042c3e6e6f14
 AUX plymouth.initd 402 RMD160 12174a38b36e741c962a7e33e037bbd04f2e7d75 SHA1 d9221a1b76bcba43dd51df565715b7c9c602a91d SHA256 81fdc6838c72b0ed3874e08aefd6e77a4f735ce406452120ee1d52b3196c1db8
 DIST plymouth-0.8.3.tar.bz2 763575 RMD160 bb5c13e4eb48d8b881a4d2cc15190c377430f672 SHA1 30135d3b2db42778b32b6d2d9e7e0da90f0da599 SHA256 2e51abbc087228f7910302334755d0190fc9e923eae9992150adb0f6cccc9077
-EBUILD plymouth-0.8.3-r5.ebuild 2017 RMD160 97e529b2994e6dd89de9fbdca9df6a420a113318 SHA1 45e5eeee58927dae8416b4680bdf62eb05838791 SHA256 b7995035a268010225c42b55695a5498f75a12d06768c8e7e2b6bce0082dd041
-EBUILD plymouth-9999.ebuild 1912 RMD160 2d7745bef4af19cd138b9ba40326d37999b1b907 SHA1 765745e33445a9fa7336a9a9358adbd7e628a494 SHA256 3dd0ade04b20d180a013f661f766be344bba78dae7baa353572ec136d3553bb6
-MISC ChangeLog 3118 RMD160 c5635bef9a9708c04dd63fa882b7b990ffd00bde SHA1 0556b4a403175fabf07a48d38c2907af4ad97b30 SHA256 5a7e981a47bbe7c20da8df82a21a20c7e8831eb6aa6660310b8622f1ecd50b1f
+EBUILD plymouth-0.8.3-r5.ebuild 1908 RMD160 2bc79f43c002bb72f6c77942998094c2348ab1dd SHA1 f1857566f461ff8063d91cf1263f198f50db3c12 SHA256 24854ecfacae0d98b74dd1754e4527fb1e062a937f34e5e9c33405bef86a9665
+EBUILD plymouth-9999.ebuild 1803 RMD160 d23b65a9755a788f904eed54eff02c3678fb6cd3 SHA1 095a6b3aab0fd5d010ca09c36ff2d7a3439acf81 SHA256 2c78eca40b4ed34b7479b7901b25b63d45858411925d155e3ae98b2765ea55e6
+MISC ChangeLog 3303 RMD160 aab65a52d7d0e2fb52540b157b4344efa7c0809c SHA1 ac7ab25e8db5afc4a6b883cd688aef14fae19c61 SHA256 ef83a76cf4f308191557a171a094cca04f7ac8e243572690eff9ff82c45edec7
 MISC metadata.xml 1051 RMD160 97214658a47faf8fc63e38b4d423979345dd281e SHA1 84c1722a770c01066f78e45b07d46af9f36cb65e SHA256 3d7d850b76cdb158d1a5ed6385a8c0771687d10ba50401e4dce4906a3b96ed16
